fixed a documentation sign error - no effect on code
git-svn-id: https://svn.mccode.org/svn/McStasTeX@223 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/Single_crystal.tex
+++ b/trunk/Single_crystal.tex
@@ -260,8 +260,8 @@ to lie on the line between the center of the Ewald sphere
 $-\boldsymbol{k}_{\rm i}$ and the reciprocal lattice point
 $\boldsymbol{\tau}$. Since the radius of the Ewald sphere is $k_{\rm
   i}$, this point is
-$$ \boldsymbol{o}=(1 - k_{\rm i}/\rho)\boldsymbol{\rho} - \boldsymbol{\tau} $$
-where $\rho = \boldsymbol{k}_{\rm i} - \boldsymbol{\tau}$.
+$$ \boldsymbol{o}=(k_{\rm i}/\rho - 1)\boldsymbol{\rho} - \boldsymbol{\tau} $$
+where $\boldsymbol{\rho} = \boldsymbol{k}_{\rm i} - \boldsymbol{\tau}$.
 \begin{figure}[t]
   \begin{center}
     \psfrag{ki}[r][r]{$\boldsymbol{k}_{\rm i}$}
