--- a/trunk/running.tex
+++ b/trunk/running.tex
@@ -549,8 +549,8 @@ When choosing the HTML format, the simulation results are saved as a web page, w
       \texttt{--mpi={\it NB\_CPU}}
         & This option will distribute the simulation over NB\_CPU node (requires MPI to be installed). Performances are ideal.\\
       \hline
-      \texttt{--threads}
-        & This option will distribute the simulation over threads on multi-core/cpu machines (requires OpenMP multi threading to be available). Performances are good.\\
+      \texttt{--multi={\it NB\_CPU}} \my \texttt{--grid={\it NB\_CPU}}
+        & This option will distribute the simulation over NB\_CPU node (requires SSH to be installed). Performances are ideal.\\
       \hline
       \texttt{--machines={\it MACHINES}}
         & Specify a list of distant machines/nodes to be used for MPI and grid clustering. Default is to use local SMP cluster.\\
@@ -1546,48 +1546,59 @@ Parallelizing a computation is in general possible when dependencies between
 
 \MCS\ provides three methods in order to distribute computations on many computers.
 \begin{itemize}
-\item when scanning instrument parameters (using \texttt{mcrun --multi -N}),
-  it is possible to distribute each scan step on a list of computers (see section \ref{s:ssh-grid}).
+\item when using a set of nodes (grid, cluster or multi-cores), it is possible to distribute simulations on a 
+  list of computers and multi-core machines (see section \ref{s:ssh-grid}). Results are automatically 
+  merged after completion. This method is very efficient, and only requires SSH to be installed/configured.
 \item when using an homogeneous computer cluster, each simulation (including scan
   steps) may be computed in parallel using MPI. We recommend this method on clusters (see section \ref{s:mpi}).
 \item when using SMP machines (multi core/processor machines) \MCS\ may
   distribute the simulations among CPU's using multi-threading
-  mechanism, using the \verb+OpenMP+ library. We recommend this method on multicore/cpu machines (see section \ref{s:openmp}).
+  mechanism, using the \verb+OpenMP+ library. This method is NOT very efficient (see section \ref{s:openmp}).
 \end{itemize}
 
 Last but not least, you may run simulations manually on a number of machines.
-Once the distributed simulation has been completed, you may merge their results using the \verb+mcformat+ (see section \ref{s:mcformat}) \index{Tools!mcformat} in order to obtain a set of files just as if it had been executed on a single machine.
+Once the distributed simulation have been completed, you may merge their results using \verb+mcformat+ (see section \ref{s:mcformat}) \index{Tools!mcformat} in order to obtain a set of files just as if it had been executed on a single machine.
 
-\subsection{Distribute mcrun scans (ssh grid) - Unix only}\label{s:ssh-grid}
-  This is an experimental option to
-  distribute scan steps on a set of machines using \emph{ssh}
+All of these methods can be used, when available, from \texttt{mcgui}.
+
+\subsection{Distribute mcrun simulations on grids, multi-cores and clusters (SSH grid)}
+\label{s:ssh-grid}
+  This method distributes simulations on a set of machines using \emph{ssh}
   connections. To use this option you will need
   \begin{enumerate}
-  \item{A set of unix machines of the same architecture (binary compatible). All
-      machines should have the same \MCS\ distribution installed.}
+  \item{A set of unix machines of the same architecture (binary compatible).}
   \item{ \texttt{ssh} access from the master node (where \MCS\ is
       installed) to the slaves through e.g. DSA keys \emph{without} a
       password. These keys should be generated using the command
       \texttt{ssh-keygen}. Run \emph{e.g.} \texttt{ssh-keygen -t dsa} on
       master node, enter no passphrase and add resulting
       \texttt{.ssh/id\_dsa.pub} to \texttt{.ssh/authorized\_keys}
-      on all the slave nodes. The key generation and registering mechanism may be done automatically for the local machine from the \emph{Help menu/Install DSA key} item of \verb+mcgui+.}
+      on all the slave nodes. The key generation and registering mechanism 
+      may be done automatically for the local machine from the 
+      \emph{Help menu/Install DSA key} item of \verb+mcgui+.}
   \item{The machine names listed in the file \texttt{.mcstas-hosts} in
       your home directory or in the \texttt{MCSTAS/tools/perl/mcstas-hosts} on
       the master node, one node per line. The \verb'--machines=<file>' option
-      enables to specify the hosts file to use. If it does not exist, only the current machine will be used (for multi-processor/core machines).}
-  \item{Execute \texttt{mcrun} as normally, appending \texttt{--multi} or
-      \texttt{-M} will divide the $N$ scanpoints across the machines in
+      enables to specify the hosts file to use. If it does not exist, only 
+      the current machine will be used (for multi-processor/core machines).}
+  \item{Without ssh keys, passwords will be prompted many times. To avoid this, 
+      we recommend to use only the local machine (for multi-cores/cpu), i.e. do
+      not use a machine hosts file.}
+  \item{Execute \texttt{mcrun} or \texttt{mcgui} as normally, appending \texttt{--multi=NB} or
+      \texttt{--grid=NB} will split each simulation onto $NB$ nodes across the machines in
       \texttt{.mcstas-hosts $+$ localhost}.}
   \end{enumerate}
   Each of the scan steps is executed on distant machines, sending the executable
   with \emph{scp}, executing single simulations, and then retrieving individual
-  scan steps on the master machine.
+  results on the master machine. These are then merged. As nodes execute completely
+  separated simulations, it is not possible to send messages or interrupt on-going
+  computations. However, when peforming simulation scans, it is possible to stop the scan
+  as soon as the on-going computation step ends.
 
-  {\bf Warning:} This option is considered \emph{experimental} - i.e.,
-  you are welcome to use it, but be ready for trouble. Note also that
-  this is a unix only option in \texttt{mcgui} and \texttt{mcrun}, it
-  {\bf does not} work on Windows.
+  This method shows similar efficiency as MPI, but without MPI installation. It is 
+  especially suited on multi-core machines, but may also be used on any set of distant 
+  machines (grids), as well as clusters. For Windows users,
+  we recommend the installation of the PuTTY SSH client.
 
 \subsection{Parallel computing (MPI)}
 \label{s:mpi}
@@ -1605,7 +1616,7 @@ neutrons simulated. As a result, \MCS\ generates two kinds of data sets:
 \item event lists: the merge of events is done by concatenation
 \end{itemize}
 The MPI support requires that MPICH (recommended), or alternatively LAM-MPI or OpenMPI, is installed on a set of nodes.
-This usually also requires properly setup \texttt{ssh} connections and keys as indicated in the ssh grid system (Section \ref{s:ssh-grid}). Some OpenMPI implementations do not recognize multi-cores as separate nodes. In this case, you should use MPICH, or the OpenMP threading mechanism (see section \ref{s:mpi}).
+This usually also requires properly setup \texttt{ssh} connections and keys as indicated in the ssh grid system (Section \ref{s:ssh-grid}). Some OpenMPI implementations do not recognize multi-cores as separate nodes. In this case, you should use MPICH, or the SSH grid.
 
 There are 3 methods for using MPI
 \begin{itemize}
@@ -1613,6 +1624,8 @@ There are 3 methods for using MPI
 \item A much simpler way is to use \verb+mcrun -c --mpi=NB_CPU ...+ which will recompile and run MPICH.
 \item The McGUI interface supports MPICH from within the Run Dialog.
 \end{itemize}
+
+The MPI support is especially suited on clusters. As an alternative, the SSH grid presented above (section \ref{s:ssh-grid}) is very flexible and requires no configuration.
 
 \subsubsection{MPI Basic usage}
 
@@ -1707,7 +1720,7 @@ and merge operations.
   \end{itemize}
 \end{itemize}
 
-Here is a table showing some comparison between MPI and no-MPI
+Here is a table showing some comparison between MPI and non-MPI
 simulations. The cluster is built with 2 bi-xeon 2GHz machines,
 resulting in 4 processors.
 \begin{center}
@@ -1732,15 +1745,18 @@ fusion of the computations. For instance, spreading a computation
 implies either an \verb'rsh' or and \verb'ssh' session to be opened on
 every node.
 
-Larger tests have shown that the speedup is proportional to the number of nodes, and there is no significant overhead up to at least 100 nodes. The efficiency of \MCS\ w.r.t. parallel computing is thus close to ideal.
+Larger tests have shown that the speedup is the number of nodes, 
+and there is no significant overhead up to at least 100 nodes. The efficiency 
+of \MCS\ w.r.t. MPI parallel computing is thus close to ideal.
 
-It is possible to use the MPI and OpenMP threading together with command \verb+mcrun --mpi --threads ...+ on multi-core clusters (see below).
-c
 \subsection{McStas/MPI Bugs and limitations}\index{Bugs}
 
 \begin{itemize}
 \item Signals are \emph{not} supported while simulating with MPI (since
-  asynchroneous events cannot be easily transmitted to all nodes).
+  asynchroneous events cannot be easily transmitted to all nodes). This
+  means it is not possible to cancel an on-going computation. However, 
+  simulation scans can be interrupted as soon as the on-going computation 
+  step ends.
 \item Some header of output files might contain minor errors.
 \item The computation split does not take into account the speed or the
   load of nodes: the overall time of a distributed computation is
@@ -1753,18 +1769,22 @@ c
   have to set ssh keys to avoid use of passwords; if
   using \verb'rsh', you have to set a \verb'.rhosts' file.
   On non-local accounts, this procedure may fail and ssh always require passwords.
-\item When reading external data files during the TRACE (specially virtual sources) all nodes might access the same data, potentially producing wrong results. We do not recommend using MPI when reading virtual sources.
-\item \MCS\ with MPI support was demonstrated to run efficiently up to 100 machines. Above this value, communication issues between nodes may arise, depending on the architecture and network capabilities, particularly when running scans of parameters.\index{Bugs}
-\item OpenMPI sometimes does not count multi-cores as separate nodes. We then recommend to use the OpenMP threading mechanism on these systems (see below).
+\item When reading external data files during the TRACE (specially virtual sources) 
+  all nodes might access the same data, potentially producing wrong results. We do 
+  NOT recommend using MPI when reading virtual sources.
+\item \MCS\ with MPI support was demonstrated to run efficiently up to 100 machines. 
 \end{itemize}
 
 \subsection{Parallel computing (multi-threading)}
 \label{s:openmp}
-Multi-threading using OpenMP is very efficient on multi-core machines. This parallelization does not require any special configuration except a recent C compiler version (gcc 4.2, icc/icpc, pgcc, xlc) to be specified at \MCS\ install/configuration with option e.g. \verb+--with-cc=gcc-4.2+. The number of nodes is set automatically to the number of local cores/cpu. 
+Multi-threading using OpenMP applies on multi-core machines. This parallelization does not require any 
+special configuration except a recent C compiler version (gcc 4.2, icc/icpc, pgcc, xlc) to be 
+specified at \MCS\ install/configuration with option e.g. \verb+--with-cc=gcc-4.2+. 
+The number of nodes is set automatically to the number of local cores/cpu. To benefit from this mode, 
+use \verb+mcrun --threads ...+. When available, the option will show up 
+in the \verb+mcgui+ Run dialog, and eventually force re-compilation of the instrument if needed. 
 
-To benefit from this mode, use \verb+mcrun --threads ...+. When available, the option will show up in the \verb+mcgui+ Run dialog, and eventually force re-compilation of the instrument if needed. 
-
-It is possible to use the MPI and OpenMP together with command \verb+mcrun --mpi --threads ...+ to benefit entirely from multi-core/cpu clusters. 
+This method is NOT very efficient, due to the complexity of simulations which make it difficult to avoid memory race conditions\footnote{The Pth and POSIX threads libraries show even worse efficiency}. We rather recommend to use SSH grid or MPI mechanism. 
 
 %%% Local Variables:
 %%% mode: latex
