--- a/trunk/running.tex
+++ b/trunk/running.tex
@@ -10,9 +10,8 @@ list~\cite{mcstas_webpage} or the authors should be contacted.
 {\bf Important note for Windows users:} It is a known problem that some of
 the \MCS\ tools do not support filenames / directories with spaces.
 We are working on a more general approach to this problem, which will
-hopefully be solved in a further release. Also, there are known issues
-for \MCS\ with recent Perl versions for Windows. We recommend to use
-ActiveState {\bf Perl 5.6}. (Note that as of \MCS\ 1.10, all needed
+hopefully be solved in a further release. We recommend to use
+ActiveState {\bf Perl 5.10}. (Note that as of \MCS\ 1.10, all needed
 support tools for Windows are bundled with \MCS\ in a single installer file.)
 
 To use \MCS, an instrument
@@ -831,6 +830,8 @@ The {\bf File} menu has the following features:
   compilations and simulations into a file.
 \item[File/Clear output] erases all text in the window showing output of
   compilations and simulations.
+\item[File/Save configuration] saves user settings from Configuration
+  options and Run dialogue to disk.
 \item[File/Quit] exits the graphical user interface front-end.
 \end{description}
 
@@ -863,13 +864,16 @@ The {\bf File} menu has the following features:
     generated c-code. This is very handy when setting up an instrument model, which requires regular compilations.
   \item Adjustment of final precision when doing parameter optimization.
 \end{itemize}
+To save the chosen settings for your next \MCS\ run, use Save
+Configuration in the File menu.
 \end{description}
+
 
 \begin{figure}[htb!]
   \begin{center}
     \includegraphics[width=0.3\textwidth]{figures/choose_backend.eps}
   \end{center}
-\caption{The ``configuration options'' dialog in \texttt{mcgui}.}
+\caption{The ``configuration options'' dialog in \texttt{mcgui}.} 
 \label{fig:mcgui-choose}
 \end{figure}
 
@@ -977,6 +981,8 @@ The meaning of the different fields is as follows:
 \item[Run:Start] runs the simulation.
 \item[Run:Cancel] aborts the dialog.
 \end{description}
+Most of the settings on the run dialog can be saved for your next
+\MCS\ run using 'Save configuration' in the File menu.
 
 Before running the simulation, the instrument definition is
 automatically compiled if it is newer than the generated C file (or if the C file
