fixed some recurring misspellings stumbled upon
git-svn-id: https://svn.mccode.org/svn/McStasTeX@229 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/Source_adapt.tex
+++ b/trunk/Source_adapt.tex
@@ -48,7 +48,7 @@ the sampling distribution.
 
 A warning is in place here regarding potentially wrong results
 using optimization techniques.
-It is highly recommanded in any case to benchmark 'optimized' simulations
+It is highly recommended in any case to benchmark 'optimized' simulations
 against non-optimized ones, checking that obtained results are the same,
 but hopefully with a much improved statistics.
 
