--- a/trunk/comp.tex
+++ b/trunk/comp.tex
@@ -235,7 +235,8 @@ on Unix-like systems and \verb+C:\mcstas\lib+ on Windows systems, but it may be
 changed using the \verb+MCSTAS+ environment variable.
 \index{Environment variable!MCSTAS}
 
-In case users only require to add new features, preserving the existing features of a component, it is recommanded to make use of the \verb+EXTEND+ keyword\index{Keyword!EXTEND} in the instrument description itself, as documented in the User Manual. For larger modification of a component, it is advised to make a copy
+In case users only require to add new features, preserving the existing features of a component, 
+using the \verb+EXTEND+ keyword\index{Keyword!EXTEND} in the instrument description file is recommended. For larger modification of a component, it is advised to make a copy
 of the component file into the working directory.
 A component file in the local directory will in \MCS\ take precedence over
 a library component of the same name.
