--- a/trunk/sources.tex
+++ b/trunk/sources.tex
@@ -75,7 +75,7 @@ p_0 = \frac{N_{\rm total}}{N_{\rm sim}} =
 \end{equation}
 where the source flux is now given a $\lambda$-dependence.
 
-As a start, we recommand new \MCS\ users to use the
+As a start, we recommend new \MCS\ users to use the
 {\bf Source\_simple} component.
 Slightly more realistic sources are {\bf Source\_Maxwell\_3} for
 continuous sources or {\bf Moderator} for time-of-flight sources.
