--- a/trunk/Single_crystal.tex
+++ b/trunk/Single_crystal.tex
@@ -478,7 +478,7 @@ file. Each line contains seven numbers, separated by white space. The
 first three numbers are the $(h,k,l)$ indices of the reciprocal lattice
 point, and the last number is the value of the structure factor
 $|F_{\boldsymbol{\tau}}|^2$, in barns. The middle three numbers are not
-used and may be omitted; they are nevertheless recommanded since this makes
+used and may be omitted; they are nevertheless recommended since this makes
 the file format compatible with the output from the Crystallographica
 program~\cite{crystallographica}.
 Any line beginning with any character of \verb+#;/%+ is considered to be a
@@ -517,7 +517,7 @@ These files contain an extensive self-documented header defining most the sample
 
 Powder files from ICSD/LAZY \cite{icsd_ill} and Fullprof \cite{Fullprof}
 may also be used (see Table \ref{t:powders-data}, page \pageref{t:powders-data}).
-We do not recommand to use these as the equivalent $\vec q$ vectors are superposed, not
+We do not recommend to use these as the equivalent $\vec q$ vectors are superposed, not
 all Bragg spots will be simulated, and the intensity will not be scaled by the
 multiplicity for each spot.
 
