--- a/trunk/Single_crystal.tex
+++ b/trunk/Single_crystal.tex
@@ -5,13 +5,14 @@
 \index{Incoherent elastic scattering}
 \index{Multiple scattering}
 
-\component{Single\_crystal}{Kristian Nielsen}{$x_{width}, y_{height}, z_{thick}$,$\vec a, \vec b, \vec c, \Delta d/d$, mosaic, reflections}{$\sigma_{abs}, \sigma_{inc}$, ...}{Partially validated, centered. Further validation undergoing. Known BUGS: The component is known not to work as a Bragg monochromator, likely the problem relates to the internal definition of the reciprocal space. Also, always use a non-zero value of the $\Delta d/d$ parameter.}
+\component{Single\_crystal}{Kristian Nielsen}{$x_{width}, y_{height}, z_{thick}$,$\vec a, \vec b, \vec c, \Delta d/d$, mosaic, reflections}{$\sigma_{abs}, \sigma_{inc}$, ...}{Partially validated, centered. Further validation undergoing. Known BUGS: The component is known not to work as a Bragg monochromator, likely the problem relates to the internal definition of the reciprocal space. Possibly related to this, the model of anistropic mosaic is broken - always use a non-zero isotropic mosaic. Also, always use a non-zero value of the $\Delta d/d$ parameter.}
 
 The {\bf Single\_crystal} component models a thick, flat single crystal
 with multiple scattering and absorption with elastic coherent scattering.
 An elastic incoherent background may also be simulated.
 It may be used to describe samples for diffraction,
 but also for accurate monochromator descriptions.
+The component is currently under further review. The current documentation is outdated, especially with respect to the model of crystal mosaicity.
 
 The input parameters for the component are \textit{xwidth},
 \textit{yheight}, and \textit{zthick} to define the dimensions of the
